[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vrmapi-async"
version = "0.1.0"
description = "A modern, async Python client for the Victron VRM API."
readme = "README.md"
requires-python = ">3.9.1,<4"
license = { file = "LICENSE" } # TODO
authors = [
  { name="Tomáš Sandrini", email="t@tsandrini.sh" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.urls]
"Homepage" = "https://github.com/tsandrini/vrmapi-async"
"Repository" = "https://github.com/tsandrini/vrmapi-async"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "vrmapi-async[test]",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "respx>=0.22.0",
]
# markers = [
#     "online: marks tests as online (require network and hit the real VRM demo API)",
# ]
