[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vrmapi-async"
version = "0.1.0"
description = "A modern, async Python client for the Victron VRM API."
readme = "README.md"
requires-python = ">3.9.1,<4"
license = { file = "LICENSE" } # TODO
authors = [
  { name="Tomáš Sandrini", email="t@tsandrini.sh" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.urls]
"Homepage" = "https://github.com/tsandrini/vrmapi-async"
"Repository" = "https://github.com/tsandrini/vrmapi-async"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]
dev = [
    "ruff>=0.4.0",
    "vrmapi-async[test]",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "ruff>=0.4.0",
    {include-group = "test"},
]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
    "respx>=0.22.0",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = false
namespace_packages = true
disallow_any_explicit = false
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_unreachable = false

[tool.ruff]
# List of enabled rulsets.
# See https://docs.astral.sh/ruff/rules/ for more information.
lint.select = [
    "A",   # Prevent builtins shadowing
    "E",   # Error
    "F",   # Pyflakes
    "W",   # Pycodestyle
    "C90", # McCabe complexity
    "I",   # Isort
    "N",   # pep8-naming
    "D",   # Pydocstyle
    "ANN", # Pytype annotations
    "S",   # Bandit
    "B",   # Bugbear
    "COM", # Commas
    "C4",  # Comprehensions
    "ISC", # Implicit string concat
    "PIE", # Unnecessary code
    "T20", # Catch prints
    "PYI", # validate pyi files
    "Q",   # Checks for quotes
    "RSE", # Checks raise statements
    "RET", # Checks return statements
    "SLF", # Self checks
    "SIM", # Simplificator
    "PTH", # Pathlib checks
    "ERA", # Checks for commented out code
    "PL",  # PyLint checks
    "RUF", # Specific to Ruff checks
    "ICN", # Import conventions
    "DTZ", # Datetime zone
    "LOG", # Logging
    "G",   # Logging format
    "TID", # Tidy imports
    "TD",  # todos formatting
    "ARG", # Unused arguments
    "UP",  # Pyupgrade
    "BLE", # Do not catch blind exceptions
]
lint.ignore = [
    "ERA001",  # Commented out code
    "PLR0913", # Too many arguments for function call
    "TD003",   # Missing issue link for this TODO
    "COM812",  # Trailing comma missing — conflicts with ruff-format
    "ANN401",  # typing.Any disallowed — needed for Pydantic validators/response models
    "RUF012",  # Mutable ClassVar — false positive on Pydantic field declarations
]
lint.mccabe = { max-complexity = 10 }
exclude = [
    ".venv/",
]
target-version = "py310"
line-length = 88

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # Use of assert detected
    "S105",   # Possible hardcoded password in variable (test fixtures)
    "S106",   # Possible hardcoded password (test fixtures)
    "ARG001", # Unused function argument (pytest fixtures)
    "ARG002", # Unused method argument (pytest fixtures)
    "SLF001", # Private member access (testing internals)
    "ANN",    # Type annotations not required in tests
    "D100",   # Missing module docstring
    "D101",   # Missing class docstring
    "D102",   # Missing method docstring
    "D103",   # Missing function docstring
    "D104",   # Missing package docstring
    "D107",   # Missing __init__ docstring
    "DTZ001", # Naive datetimes are intentional in tests
    "RUF001", # Ambiguous unicode characters (intentional test data)
    "RUF046", # Unnecessary int cast (explicit in test assertions)
    "PLC0415", # Inline imports acceptable in tests
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "float", "bytes"]
